--- a/templates/account.html
+++ b/templates/account.html
@@ -4,12 +4,13 @@
 		<title>
 			Bridgtek IoT Platform - Account
 		</title>
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" href="css/styles2.css">
 	</head>
 
 	<body>
 		<div class="topnav">
-			<img src="logo.png">
+			<img src="images/logo.png">
 			<a href="login.html" class="button" style="float:right" >LOGOUT</a>
 		</div>
 
