--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,13 +4,13 @@
 		<title>
 			Bridgtek IoT Platform - Contact
 		</title>
-		<link rel="stylesheet" href="styles.css">
-		<link rel="stylesheet" href="styles2.css">
+		<link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" href="css/styles2.css">
 	</head>
 
 	<body>
 		<div class="topnav2">
-			<img src="logo.png">
+			<img src="images/logo.png">
 			<a href="index.html" style="float:right; margin-right:20px">HOME</a>
 		</div>
 
