--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,13 +4,13 @@
 		<title>
 			Bridgtek IoT Platform - Signup
 		</title>
-		<link rel="stylesheet" href="styles.css">
-		<link rel="stylesheet" href="styles2.css">
+		<link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" href="css/styles2.css">
 	</head>
 
 	<body>
 		<div class="topnav2">
-			<img src="logo.png">
+			<img src="images/logo.png">
 			<a href="contact.html" style="float:right; margin-right:20px">CONTACT</a>
 			<a href="index.html" style="float:right">HOME</a>
 		</div>
