--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<div class="topnav">
 			<img src="images/logo.png">
-			<a href="login.html" class="button" style="float:right" >LOGIN</a>
+			<a href="login.html" class="button" style="float:right; margin-right:20px">LOGIN</a>
 		</div>
 
 		<div class="row">
