--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -123,11 +123,13 @@ body {
 }
 
 /* Clear floats after the columns */
+/*
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
+*/
 
 /* Footer */
 .footer {
