--- a/templates/account.html
+++ b/templates/account.html
@@ -62,15 +62,34 @@
 			async function get_device_list(username, token) {
 				let count = await get_device_list_count(username, token);
 				console.log(count)
-				document.getElementById("devicecount").innerHTML = count;
+//				document.getElementById("devicecount").innerHTML = count;
 
+				var table = document.getElementById("devices_table");
+				var rows = table.getElementsByTagName("tr")
+
+				
 				var i = 0;
+				
+				for (i=rows.length-1; i>0; i--) {
+					table.deleteRow(i);
+				}
 				for (i=0; i<count; i++) {
 					let result = await get_device_index(username, token, i)
-					document.getElementById("device" + (i+1).toString()).innerHTML = result;
-				}
-				for (i=count; i<3; i++) {
-					document.getElementById("device" + (i+1).toString()).innerHTML = "Device" + (i+1).toString();
+					var jsonresult = JSON.parse(result);
+					var devicename = jsonresult.devicename;
+					var deviceid = jsonresult.deviceid;
+					var cert = jsonresult.cert;
+					var pkey = jsonresult.pkey;
+
+					var rows = table.insertRow(i+1);
+					var cell1 = rows.insertCell(0);
+					var cell2 = rows.insertCell(1);
+					var cell3 = rows.insertCell(2);
+					var cell4 = rows.insertCell(3);
+					cell1.innerHTML = devicename;
+					cell2.innerHTML = deviceid;
+					cell3.innerHTML = cert;
+					cell4.innerHTML = pkey;
 				}
 			}
 
@@ -81,8 +100,11 @@
 				xhr.onreadystatechange = function() { // Call a function when the state changes.
 					if (this.readyState == XMLHttpRequest.DONE && this.status == 200) {
 						var jsonResponse = JSON.parse(xhr.responseText);
-						var info = jsonResponse.info;
-						document.getElementById("user").innerHTML = info;
+						var info = JSON.parse(jsonResponse.info);
+						var given_name = info.given_name;
+						var family_name = info.family_name;
+						var email = info.email;
+						document.getElementById("user").innerHTML = info.given_name + " " + family_name + " " + email;
 						console.log(info)
 					}
 					else if (this.readyState === XMLHttpRequest.DONE && this.status != 200) {
@@ -96,20 +118,18 @@
 				var devicename = document.getElementById("devicename_add").value;
 				console.log("add_device = " + devicename);
 				if (devicename.length==0) {
-					document.getElementById("status").innerHTML = "adding failed! devicename is empty!";
+					alert("Device name is empty!");
 					return;
 				}
-				document.getElementById("status").innerHTML = devicename;
 				var xhr = new XMLHttpRequest();
 				xhr.open("POST", "/register_device", true);
 				xhr.setRequestHeader('Content-Type', 'application/json');
 				xhr.onreadystatechange = function() { // Call a function when the state changes.
 					if (this.readyState == XMLHttpRequest.DONE && this.status == 200) {
-						document.getElementById("status").innerHTML = devicename + " added successfully!";
 						console.log("Device added successfully!")
 					}
 					else if (this.readyState === XMLHttpRequest.DONE && this.status != 200) {
-						console.log("Error, status code = " + xhr.status);
+						alert("Adding device failed!");
 					}
 				}
 				xhr.send(JSON.stringify({"username": username, "token": token, "devicename": devicename}));
@@ -119,20 +139,18 @@
 				var devicename = document.getElementById("devicename_remove").value;
 				console.log("remove_device = " + devicename);
 				if (devicename.length==0) {
-					document.getElementById("status").innerHTML = "removing failed! devicename is empty!";
+					alert("Device name is empty!");
 					return;
 				}
-				document.getElementById("status").innerHTML = devicename;
 				var xhr = new XMLHttpRequest();
 				xhr.open("POST", "/unregister_device", true);
 				xhr.setRequestHeader('Content-Type', 'application/json');
 				xhr.onreadystatechange = function() { // Call a function when the state changes.
 					if (this.readyState == XMLHttpRequest.DONE && this.status == 200) {
-						document.getElementById("status").innerHTML = devicename + " removed successfully!";
 						console.log("Device added successfully!")
 					}
 					else if (this.readyState === XMLHttpRequest.DONE && this.status != 200) {
-						console.log("Error, status code = " + xhr.status);
+						alert("Removing device failed!");
 					}
 				}
 				xhr.send(JSON.stringify({"username": username, "token": token, "devicename": devicename}));
@@ -238,7 +256,7 @@
 				var devicename = document.getElementById("devicename_test").value;
 				console.log("test_device = " + devicename);
 				if (devicename.length==0) {
-					document.getElementById("deviceinfo").innerHTML = "testing failed! devicename is empty!";
+					alert("Device name is empty!");
 					return;
 				}
 				var epochtime = (new Date()).getTime() / 1000;
@@ -248,8 +266,12 @@
 				xhr.setRequestHeader('Content-Type', 'application/json');
 				xhr.onreadystatechange = function() { // Call a function when the state changes.
 					if (this.readyState == XMLHttpRequest.DONE && this.status == 200) {
-							var jsonResponse = JSON.parse(xhr.responseText);
-							var value = jsonResponse.value;
+						var jsonResponse = JSON.parse(xhr.responseText);
+						var value = jsonResponse.value;
+						alert("RTC is set successfully!");
+					}
+					else if (this.readyState === XMLHttpRequest.DONE && this.status != 200) {
+						alert("Device is not running!");
 					}
 				}
 				xhr.send(JSON.stringify({"username": username, "token": token, "devicename": devicename, "value": epochtime}));
@@ -269,6 +291,8 @@
 						}
 						else if (this.readyState === XMLHttpRequest.DONE && this.status != 200) {
 							document.getElementById("devicestatus").innerHTML = "Status: " + "not running";
+							alert("Device is not running!");
+							resolve("not running");
 						}
 					}
 					xhr.send(JSON.stringify({"username": username, "token": token, "devicename": devicename}));
@@ -279,7 +303,7 @@
 				var devicename = document.getElementById("devicename_test").value;
 				console.log("test_device = " + devicename);
 				if (devicename.length==0) {
-					document.getElementById("deviceinfo").innerHTML = "testing failed! devicename is empty!";
+					alert("Device name is empty!");
 					return;
 				}
 
@@ -289,9 +313,10 @@
 				xhr.onreadystatechange = function() { // Call a function when the state changes.
 					if (this.readyState == XMLHttpRequest.DONE && this.status == 200) {
 						document.getElementById("devicestatus").innerHTML = "Status: " + "restarting";
+						alert("Device restarted successfully!");
 					}
 					else if (this.readyState === XMLHttpRequest.DONE && this.status != 200) {
-						document.getElementById("devicestatus").innerHTML = "Status: " + "not running";
+						alert("Device is not running!");
 					}
 				}
 				xhr.send(JSON.stringify({"username": username, "token": token, "devicename": devicename, "value": "restart"}));
@@ -301,14 +326,14 @@
 				var devicename = document.getElementById("devicename_test").value;
 				console.log("test_device = " + devicename);
 				if (devicename.length==0) {
-					document.getElementById("deviceinfo").innerHTML = "testing failed! devicename is empty!";
+					alert("Device name is empty!");
 					return;
 				}
 
 				var number = document.getElementById("gpionumber").value;
 				console.log("number = " + number);
 				if (number.length==0) {
-					document.getElementById("deviceinfo").innerHTML = "testing failed! GPIO number is empty!";
+					alert("GPIO number is empty!");
 					return;
 				}
 
@@ -321,9 +346,10 @@
 						var value = jsonResponse.value;
 						console.log(value)
 						document.getElementById("gpiovalue").value  = value.toString();
+						alert("GPIO is retrieved successfully!");
 					}
 					else if (this.readyState === XMLHttpRequest.DONE && this.status != 200) {
-						document.getElementById("devicestatus").innerHTML = "Status: " + "not running";
+						alert("Device is not running!");
 					}
 				}
 				xhr.send(JSON.stringify({"username": username, "token": token, "devicename": devicename, "number": parseInt(number)}));
@@ -333,21 +359,21 @@
 				var devicename = document.getElementById("devicename_test").value;
 				console.log("test_device = " + devicename);
 				if (devicename.length==0) {
-					document.getElementById("deviceinfo").innerHTML = "testing failed! devicename is empty!";
+					alert("Device name is empty!");
 					return;
 				}
 
 				var number = document.getElementById("gpionumber").value;
 				console.log("number = " + number);
 				if (number.length==0) {
-					document.getElementById("deviceinfo").innerHTML = "testing failed! GPIO number is empty!";
+					alert("GPIO number is empty!");
 					return;
 				}
 
 				var value = document.getElementById("gpiovalue").value;
 				console.log("number = " + value);
 				if (value.length==0) {
-					document.getElementById("deviceinfo").innerHTML = "testing failed! GPIO value is empty!";
+					alert("GPIO value is empty!");
 					return;
 				}
 
@@ -359,10 +385,10 @@
 						var jsonResponse = JSON.parse(xhr.responseText);
 						var value = jsonResponse.value;
 						console.log(value)
-						document.getElementById("deviceinfo").innerHTML = "GPIO " + number + " is set to " + value + "!";
+						alert("GPIO is set successfully!");
 					}
 					else if (this.readyState === XMLHttpRequest.DONE && this.status != 200) {
-						document.getElementById("devicestatus").innerHTML = "Status: " + "not running";
+						alert("Device is not running!");
 					}
 				}
 				xhr.send(JSON.stringify({"username": username, "token": token, "devicename": devicename, "number": parseInt(number), "value": parseInt(value)}));
@@ -372,14 +398,14 @@
 				var devicename = document.getElementById("devicename_test").value;
 				console.log("test_device = " + devicename);
 				if (devicename.length==0) {
-					document.getElementById("deviceinfo").innerHTML = "testing failed! devicename is empty!";
+					alert("Device name is empty!");
 					return;
 				}
 
 				var value = document.getElementById("uarttext").value;
 				console.log("value = " + value);
 				if (value.length==0) {
-					document.getElementById("deviceinfo").innerHTML = "testing failed! UART text is empty!";
+					alert("UART text box is empty!");
 					return;
 				}
 
@@ -391,9 +417,10 @@
 						var jsonResponse = JSON.parse(xhr.responseText);
 						var value = jsonResponse.value;
 						console.log(value)
+						alert("UART message is sent!");
 					}
 					else if (this.readyState === XMLHttpRequest.DONE && this.status != 200) {
-						document.getElementById("devicestatus").innerHTML = "Status: " + "not running";
+						alert("Device is not running!");
 					}
 				}
 				xhr.send(JSON.stringify({"username": username, "token": token, "devicename": devicename, "value": value}));
@@ -403,21 +430,21 @@
 				var devicename = document.getElementById("devicename_test").value;
 				console.log("test_device = " + devicename);
 				if (devicename.length==0) {
-					document.getElementById("notification_status").innerHTML = "testing failed! devicename is empty!";
+					alert("Device name is empty!");
 					return;
 				}
 
 				var recipient = document.getElementById("notification_recipient").value;
 				console.log("recipient = " + recipient);
 				if (recipient.length==0) {
-					document.getElementById("notification_status").innerHTML = "testing failed! recipient is empty!";
+					alert("Recipient is empty!");
 					return;
 				}
 
 				var message = document.getElementById("notification_message").value;
 				console.log("message = " + message);
 				if (message.length==0) {
-					document.getElementById("notification_status").innerHTML = "testing failed! message is empty!";
+					alert("Message is empty!");
 					return;
 				}
 
@@ -426,10 +453,10 @@
 				xhr.setRequestHeader('Content-Type', 'application/json');
 				xhr.onreadystatechange = function() { // Call a function when the state changes.
 					if (this.readyState == XMLHttpRequest.DONE && this.status == 200) {
-						document.getElementById("notification_status").innerHTML = "Status: OK";
+						alert("Notification message is sent!");
 					}
 					else if (this.readyState === XMLHttpRequest.DONE && this.status != 200) {
-						document.getElementById("notification_status").innerHTML = "Status: " + "not running";
+						alert("Device is not running!");
 					}
 				}
 				xhr.send(JSON.stringify({"username": username, "token": token, "devicename": devicename, "recipient": recipient, "message": message}));
@@ -447,7 +474,7 @@
 				var devicename = document.getElementById("devicename_test").value;
 				console.log("test_device = " + devicename);
 				if (devicename.length==0) {
-					document.getElementById("deviceinfo").innerHTML = "testing failed! devicename is empty!";
+					alert("Device name is empty!");
 					return;
 				}
 				document.getElementById("devicename").innerHTML = "DeviceName: " + devicename;
@@ -487,6 +514,21 @@
 				}
 			}
 		</script>
+		<style>
+			table, td, th {
+				border: 1px solid black;
+				text-align: left;
+			}
+
+			table {
+				border-collapse: collapse;
+				width: 100%;
+			}
+
+			th, td {
+				padding: 8px;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -521,14 +563,22 @@
 				<a class="button" onclick="remove_device('{{username}}', '{{token}}')" >Remove Device</a>
 				<input type="text" id="devicename_remove" style="width: 150px;" placeholder="Device name">
 
-				<br/><br/>
+				<br/>
 				<a id="status">Status</a><br/><br/>
-				<a id="devicecount">NumDevices</a><br/><br/>
-				<a id="device1">Device1</a><br/><br/>
-				<a id="device2">Device2</a><br/><br/>
-				<a id="device3">Device3</a>
+				<table id="devices_table" class="table table-bordered">
+					<tr>
+						<th>Name</th>
+						<th>Id</th>
+						<th>Certificate</th>
+						<th>Private key</th>
+					</tr>
+				</table>
+
+
 			</div>
 		</div>
+
+
 
 		<div class="row">
 			<div class="card">
@@ -563,7 +613,6 @@
 				<a class="button" onclick="trigger_notification('{{username}}', '{{token}}')" >Trigger Email/SMS Notification</a><br/><br/>
 				<input type="text" id="notification_recipient" style="width: 250px;" placeholder="Email or PhoneNumber"><br/>
 				<textarea rows = "5" cols = "60" id="notification_message">Some text</textarea><br/>
-				<a id="notification_status"> Status: </a>
 
 			</div>
 		</div>
