--- a/templates/account.html
+++ b/templates/account.html
@@ -126,7 +126,7 @@
 				xhr.setRequestHeader('Content-Type', 'application/json');
 				xhr.onreadystatechange = function() { // Call a function when the state changes.
 					if (this.readyState == XMLHttpRequest.DONE && this.status == 200) {
-						console.log("Device added successfully!")
+						alert("Device added successfully!")
 					}
 					else if (this.readyState === XMLHttpRequest.DONE && this.status != 200) {
 						alert("Adding device failed!");
@@ -147,7 +147,7 @@
 				xhr.setRequestHeader('Content-Type', 'application/json');
 				xhr.onreadystatechange = function() { // Call a function when the state changes.
 					if (this.readyState == XMLHttpRequest.DONE && this.status == 200) {
-						console.log("Device added successfully!")
+						alert("Device removed successfully!")
 					}
 					else if (this.readyState === XMLHttpRequest.DONE && this.status != 200) {
 						alert("Removing device failed!");
