--- a/templates/confirm_reset_password.html
+++ b/templates/confirm_reset_password.html
@@ -38,6 +38,8 @@
 						<br/>
 
 						<input type="submit" name= "form" value="Submit"/>
+						<br/><br/>
+						<a>Check email for the verification code!</a>
 						<br/><br/><br/>
 					</fieldset>
 				</form>
