--- a/templates/confirm_signup.html
+++ b/templates/confirm_signup.html
@@ -32,6 +32,8 @@
 						<br/>
 
 						<input type="submit" name= "form" value="Confirm"/>
+						<br/><br/>
+						<a>Check email for the verification code!</a>
 						<br/><br/><br/>
 					</fieldset>
 				</form>
