Minor HTML changes

--- a/templates/confirm_reset_password.html
+++ b/templates/confirm_reset_password.html
@@ -21,7 +21,7 @@
 				<form action="/confirm_forgot_password" method="post">
 					<fieldset align="left">
 						<h2>Reset your password</h2>
-
+						<br/>
 						<label for="username"><b>Username</b></label>
 						<br/>
 						<input type="text" id="username" name="username" placeholder="Username" value="{{ username_val }}" required>
@@ -38,8 +38,13 @@
 						<br/>
 
 						<input type="submit" name= "form" value="Submit"/>
-						<br/><br/>
-						<a>Check email for the verification code!</a>
+						<br/>
+
+						<br/>
+						<a href="{{ url_for('static', filename='reset_password.html') }}"><h5>Go back</h5></a>
+						<br/>
+
+						<a>Check email for the confirmation code!</a>
 						<br/><br/><br/>
 					</fieldset>
 				</form>
