--- a/templates/confirm_signup.html
+++ b/templates/confirm_signup.html
@@ -33,7 +33,8 @@
 
 						<input type="submit" name= "form" value="Confirm"/>
 						<br/><br/>
-						<a>Check email for the verification code!</a>
+
+						<a>Check email for the confirmation code!</a>
 						<br/><br/><br/>
 					</fieldset>
 				</form>
