--- a/templates/confirm_reset_password.html
+++ b/templates/confirm_reset_password.html
@@ -34,7 +34,7 @@
 
 						<label for="password"><b>New Password</b></label>
 						<br/>
-						<input type="text" id="password" name="password" placeholder="New Password" required>
+						<input type="password" id="password" name="password" placeholder="New Password" required>
 						<br/>
 
 						<input type="submit" name= "form" value="Submit"/>
