Added error handling

--- a/webapp/src/ionicapp/www/templates/account.html
+++ b/webapp/src/ionicapp/www/templates/account.html
@@ -14,11 +14,12 @@
         <span class="input-label">EMAIL</span>
         <input type="email" placeholder="" readonly="" ng-model="data.email">
       </label>
+      <ion-toggle toggle-class="toggle-positive" id="account-toggle6">MULTI-FACTOR AUTH</ion-toggle>
       <label class="item item-input" id="account-input45">
         <span class="input-label">SUBSCRIPTION</span>
         <input type="text" placeholder="" readonly="" ng-model="data.subscription">
       </label>
     </form>
-    <button id="account-button33" ng-click="submitUpgrade()" class="button button-dark button-block">Upgrade Subscription</button>
+    <button id="account-button33" ng-click="submitUpgrade()" class="button button-dark button-block">Upgrade subscription</button>
   </ion-content>
 </ion-view>
