--- a/webapp/src/ionicapp/www/templates/confirmRegistration.html
+++ b/webapp/src/ionicapp/www/templates/confirmRegistration.html
@@ -16,7 +16,7 @@
       <div class="spacer" style="height: 10px;"></div>
       <button id="confirmRegistration-button16" ng-click="submit()" class="button button-dark button-block">Submit</button>
       <button id="confirmRegistration-button45" ng-click="submitResend()" class="button button-positive button-small button-block button-clear">Did not receive the code? Resend email</button>
-      <a ui-sref="signup()" id="confirmRegistration-button17" class="button button-positive button-small button-block button-clear">Cancel</a>
+      <button id="confirmRegistration-button17" ng-click="submitCancel()" class="button button-positive button-small button-block button-clear">Cancel</button>
     </form>
   </ion-content>
 </ion-view>
