--- a/webapp/src/ionicapp/www/templates/deviceEthernet.html
+++ b/webapp/src/ionicapp/www/templates/deviceEthernet.html
@@ -1,4 +1,7 @@
 <ion-view title="Device Ethernet" hide-back-button="true" cache-view="false" nav-transition="none" id="page16" class="page_width">
+  <ion-nav-buttons side="left" class="has-header">
+    <button class="button button-icon icon ion-android-close" ng-click="submitDeviceList()"></button>
+  </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
     <div id="deviceEthernet-markdown20" style="text-align:center;" class="show-list-numbers-and-dots">
       <p style="color:#444444;font-size:18px;">
@@ -6,6 +9,11 @@
       </p>
     </div>
     <form id="deviceEthernet-form23" class="list">
+      <div id="deviceEthernet-markdown10" style="text-align:center;" class="show-list-numbers-and-dots">
+        <p style="color:#444444;font-size:15px;">Status:
+          <strong>{{ data.devicestatus }}</strong>
+        </p>
+      </div>
       <label class="item item-input" id="deviceEthernet-input36">
         <span class="input-label">IP Address</span>
         <input type="text" placeholder="" ng-model="data.ipaddr" readonly="">
@@ -24,7 +32,5 @@
       </label>
     </form>
     <button id="deviceEthernet-button32" ng-click="submit()" class="button button-dark button-block">Get</button>
-    <a ui-sref="controlDevice({&quot;devicename&quot;:&quot;&quot;+ data.devicename +&quot;&quot;,&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" id="deviceEthernet-button10"
-      class="button button-positive button-small button-block button-clear">Back to Device Control</a>
   </ion-content>
 </ion-view>
