--- a/webapp/src/ionicapp/www/templates/recover.html
+++ b/webapp/src/ionicapp/www/templates/recover.html
@@ -13,7 +13,7 @@
       <div class="spacer" style="height: 10px;"></div>
       <button id="recover-button11" ng-click="submit()" class="button button-dark button-block">Submit</button>
       <div class="spacer" style="height: 10px;"></div>
-      <a ui-sref="login()" id="recover-button12" class="button button-positive button-small button-block button-clear">Cancel</a>
+      <button id="recover-button12" ng-click="submitCancel()" class="button button-positive button-small button-block button-clear">Cancel</button>
     </form>
   </ion-content>
 </ion-view>
