--- a/webapp/src/ionicapp/www/templates/registerDevice.html
+++ b/webapp/src/ionicapp/www/templates/registerDevice.html
@@ -1,4 +1,7 @@
-<ion-view title="Register Device" nav-transition="none" id="page12" style="background-color:#FFFFFF;" class="page_width">
+<ion-view title="Register Device" hide-back-button="true" nav-transition="none" id="page12" style="background-color:#FFFFFF;" class="page_width">
+  <ion-nav-buttons side="left" class="has-header">
+    <button class="button button-icon icon ion-android-close" ng-click="submitDeviceList()"></button>
+  </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
     <form id="registerDevice-form13" class="list">
       <label class="item item-input" id="registerDevice-input28" name="input-name">
