--- a/webapp/src/ionicapp/www/templates/resetPassword.html
+++ b/webapp/src/ionicapp/www/templates/resetPassword.html
@@ -28,7 +28,7 @@
       <div class="spacer" style="height: 10px;"></div>
       <button id="resetPassword-button14" ng-click="submit()" class="button button-dark button-block">Submit</button>
       <div class="spacer" style="height: 10px;"></div>
-      <a ui-sref="recover()" id="resetPassword-button15" class="button button-positive button-small button-block button-clear">Cancel</a>
+      <button id="resetPassword-button15" ng-click="submitCancel()" class="button button-positive button-small button-block button-clear">Cancel</button>
     </form>
   </ion-content>
 </ion-view>
