--- a/webapp/src/ionicapp/www/templates/controlDevice.html
+++ b/webapp/src/ionicapp/www/templates/controlDevice.html
@@ -3,7 +3,7 @@
     <button class="button button-icon icon ion-android-close" ng-click="submitDeviceList()"></button>
   </ion-nav-buttons>
   <ion-nav-buttons side="right" class="has-header">
-    <button class="button button-icon icon ion-social-rss"></button>
+    <button class="button button-icon icon ion-social-rss" ng-click="submitStatus()"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
     <div id="controlDevice-markdown19" ng-click="submitView()" style="text-align:center;" class="show-list-numbers-and-dots">
