Added spinner/loader for login

--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -19,3 +19,36 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	height: 150px;
 }
 
+.spinner {
+	border: 16px solid #f3f3f3;
+	border-radius: 50%;
+	border-top: 16px solid #444444;
+	border-bottom: 16px solid #444444;
+	width: 80px;
+	height: 80px;
+	margin: 0% auto;
+	-webkit-animation: spin 2s linear infinite;
+	animation: spin 2s linear infinite;
+	visibility: hidden;
+}
+
+@-webkit-keyframes spin {
+	0% {
+		-webkit-transform: rotate(0deg);
+	}
+	
+	100% {
+		-webkit-transform: rotate(360deg);
+	}
+	
+}
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	
+	100% {
+		transform: rotate(360deg);
+	}
+	
+}
