--- a/webapp/src/ionicapp/www/templates/login.html
+++ b/webapp/src/ionicapp/www/templates/login.html
@@ -20,5 +20,6 @@
       <a ui-sref="signup()" id="login-button6" class="button button-positive button-small button-block button-clear">No account yet? Get started for free</a>
       <a ui-sref="recover()" id="login-button8" class="button button-positive button-small button-block button-clear">Forgot username or password?</a>
     </form>
+    <div id="login-container2" class="spinner creator-container"></div>
   </ion-content>
 </ion-view>
