Support paypal payment

--- a/webapp/src/ionicapp/www/templates/account.html
+++ b/webapp/src/ionicapp/www/templates/account.html
@@ -8,24 +8,26 @@
     <form id="account-form16" class="list">
       <ion-item class="item-divider" id="account-list-item-divider2"> Profile</ion-item>
       <label class="item item-input" id="account-input43">
-        <span class="input-label">NAME</span>
+        <span class="input-label">Name</span>
         <input type="text" placeholder="" readonly="" ng-model="data.fullname">
       </label>
       <label class="item item-input" id="account-input44">
-        <span class="input-label">EMAIL</span>
+        <span class="input-label">Email</span>
         <input type="email" placeholder="" readonly="" ng-model="data.email">
       </label>
-      <ion-toggle toggle-class="toggle-positive" id="account-toggle6">MULTI-FACTOR AUTH</ion-toggle>
-      <ion-item class="item-divider" id="account-list-item-divider1"> Subscription</ion-item>
-      <label class="item item-input" id="account-input45">
-        <span class="input-label">TYPE</span>
-        <input type="text" placeholder="" readonly="" ng-model="data.subscription">
+      <ion-toggle toggle-class="toggle-positive" id="account-toggle6">Multifactor Authentication</ion-toggle>
+    </form>
+    <form id="account-form19" class="list">
+      <ion-item class="item-divider" id="account-list-item-divider3"> Subscription</ion-item>
+      <label class="item item-input" id="account-input48">
+        <span class="input-label">Type</span>
+        <input type="text" placeholder="" readonly="" ng-model="data.subscription_type">
       </label>
-      <label class="item item-input" id="account-input46">
-        <span class="input-label">EXPIRE</span>
-        <input type="text" placeholder="" readonly="" ng-model="data.expiration">
+      <label class="item item-input" id="account-input49">
+        <span class="input-label">Credits</span>
+        <input type="text" placeholder="" readonly="" ng-model="data.subscription_credits">
       </label>
     </form>
-    <button id="account-button33" ng-click="submitUpgrade()" class="button button-dark button-block">Upgrade/downgrade subscription</button>
+    <button id="account-button33" ng-click="submitBuycredits()" class="button button-dark button-block">Buy credits</button>
   </ion-content>
 </ion-view>
