--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -32,6 +32,19 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	visibility: hidden;
 }
 
+.spinner2 {
+	border: 16px solid #f3f3f3;
+	border-radius: 50%;
+	border-top: 16px solid #444444;
+	border-bottom: 16px solid #444444;
+	width: 80px;
+	height: 80px;
+	margin: 0% auto;
+	-webkit-animation: spin 2s linear infinite;
+	animation: spin 2s linear infinite;
+	visibility: visible;
+}
+
 @-webkit-keyframes spin {
 	0% {
 		-webkit-transform: rotate(0deg);
