--- a/webapp/src/ionicapp/www/templates/order.html
+++ b/webapp/src/ionicapp/www/templates/order.html
@@ -12,9 +12,11 @@
     </form>
     <button id="order-button13" ng-click="submitBuycredits()" class="button button-dark button-block">Pay via Paypal</button>
     <div id="order-markdown29" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#000000;">User: richmond.umagat@yahoo.com</p>
+      <p style="color:#000000;">Paypal Test buyer account</p>
 
-      <p style="color:#000000;">Pass: P@$$w0rd</p>
+      <p style="color:#000000;">user: iotportal@bridgetek.com</p>
+
+      <p style="color:#000000;">pass: BrtIoTPortal</p>
     </div>
   </ion-content>
 </ion-view>
