--- a/webapp/src/ionicapp/www/templates/confirmRegistration.html
+++ b/webapp/src/ionicapp/www/templates/confirmRegistration.html
@@ -18,5 +18,6 @@
       <button id="confirmRegistration-button45" ng-click="submitResend()" class="button button-positive button-small button-block button-clear">Did not receive the code? Resend email</button>
       <button id="confirmRegistration-button17" ng-click="submitCancel()" class="button button-positive button-small button-block button-clear">Cancel</button>
     </form>
+    <div id="confirmRegistration-container5" class="spinner4 creator-container"></div>
   </ion-content>
 </ion-view>
