--- a/webapp/src/ionicapp/www/templates/resetPassword.html
+++ b/webapp/src/ionicapp/www/templates/resetPassword.html
@@ -30,5 +30,6 @@
       <div class="spacer" style="height: 10px;"></div>
       <button id="resetPassword-button15" ng-click="submitCancel()" class="button button-positive button-small button-block button-clear">Cancel</button>
     </form>
+    <div id="resetPassword-container7" class="spinner6 creator-container"></div>
   </ion-content>
 </ion-view>
