--- a/webapp/src/ionicapp/www/templates/signup.html
+++ b/webapp/src/ionicapp/www/templates/signup.html
@@ -33,6 +33,7 @@
       <div class="spacer" style="height: 10px;"></div>
       <button id="signup-button7" ng-click="submit()" class="button button-dark button-block">Sign up</button>
       <a ui-sref="login()" id="signup-button9" class="button button-positive button-small button-block button-clear">Already have an account? Login</a>
+      <div id="signup-container4" class="spinner3 creator-container"></div>
     </form>
   </ion-content>
 </ion-view>
