--- a/webapp/src/ionicapp/www/css/ionic.app.css
+++ b/webapp/src/ionicapp/www/css/ionic.app.css
@@ -9836,6 +9836,54 @@ a.button {
   animation: spin 2s linear infinite;
   visibility: visible; }
 
+.spinner3 {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #444444;
+  border-bottom: 16px solid #444444;
+  width: 80px;
+  height: 80px;
+  margin: 0% auto;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+  visibility: hidden; }
+
+.spinner4 {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #444444;
+  border-bottom: 16px solid #444444;
+  width: 80px;
+  height: 80px;
+  margin: 0% auto;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+  visibility: hidden; }
+
+.spinner5 {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #444444;
+  border-bottom: 16px solid #444444;
+  width: 80px;
+  height: 80px;
+  margin: 0% auto;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+  visibility: hidden; }
+
+.spinner6 {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #444444;
+  border-bottom: 16px solid #444444;
+  width: 80px;
+  height: 80px;
+  margin: 0% auto;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+  visibility: hidden; }
+
 @-webkit-keyframes spin {
   0% {
     -webkit-transform: rotate(0deg); }
