--- a/webapp/src/ionicapp/www/templates/recover.html
+++ b/webapp/src/ionicapp/www/templates/recover.html
@@ -15,5 +15,6 @@
       <div class="spacer" style="height: 10px;"></div>
       <button id="recover-button12" ng-click="submitCancel()" class="button button-positive button-small button-block button-clear">Cancel</button>
     </form>
+    <div id="recover-container6" class="spinner5 creator-container"></div>
   </ion-content>
 </ion-view>
