--- a/webapp/src/ionicapp/www/templates/account.html
+++ b/webapp/src/ionicapp/www/templates/account.html
@@ -5,20 +5,25 @@
         <strong> {{ data.username }} </strong>
       </p>
     </div>
-    <form id="account-form16" class="list">
-      <ion-item class="item-divider" id="account-list-item-divider2"> Profile</ion-item>
-      <label class="item item-input" id="account-input43">
+    <div id="account-button-bar2" class="button-bar">
+      <button id="account-button50" ng-class="{'active': data.activeSection==1}" ng-click="changeSection(1)" class="button button-dark button-block">Profile</button>
+      <button id="account-button51" ng-class="{'active': data.activeSection==2}" ng-click="changeSection(2)" class="button button-dark button-block">Subscription</button>
+    </div>
+    <form id="account-form16" class="list" ng-show="data.activeSection==1">
+      <label class="item item-input item-floating-label" id="account-input43">
         <span class="input-label">Name</span>
         <input type="text" placeholder="" readonly="" ng-model="data.fullname">
       </label>
-      <label class="item item-input" id="account-input44">
+      <label class="item item-input item-floating-label" id="account-input44">
         <span class="input-label">Email</span>
         <input type="email" placeholder="" readonly="" ng-model="data.email">
       </label>
-      <ion-toggle toggle-class="toggle-positive" id="account-toggle6">Multifactor Authentication</ion-toggle>
+      <label class="item item-input item-floating-label" id="account-input54">
+        <span class="input-label">Mobile Number</span>
+        <input type="text" placeholder="" readonly="" ng-model="data.mobile">
+      </label>
     </form>
-    <form id="account-form19" class="list">
-      <ion-item class="item-divider" id="account-list-item-divider3"> Subscription</ion-item>
+    <form id="account-form19" class="list" ng-show="data.activeSection==2">
       <label class="item item-input" id="account-input48">
         <span class="input-label">Type</span>
         <input type="text" placeholder="" readonly="" ng-model="data.subscription_type">
@@ -27,7 +32,11 @@
         <span class="input-label">Credits</span>
         <input type="text" placeholder="" readonly="" ng-model="data.subscription_credits">
       </label>
+      <button id="account-button33" ng-click="submitBuycredits()" class="button button-dark button-block">Buy credits</button>
     </form>
-    <button id="account-button33" ng-click="submitBuycredits()" class="button button-dark button-block">Buy credits</button>
+    <form id="account-form15" class="list" ng-show="data.activeSection==2">
+      <button id="account-button53" ng-click="" class="button button-stable button-block">View credit purchases</button>
+      <button id="account-button54" ng-click="" class="button button-stable button-block">View credit usage</button>
+    </form>
   </ion-content>
 </ion-view>
