--- a/webapp/src/ionicapp/www/templates/controlDevice.html
+++ b/webapp/src/ionicapp/www/templates/controlDevice.html
@@ -16,24 +16,24 @@
         <strong>{{ data.devicestatus }}</strong>
       </p>
     </div>
-    <button id="controlDevice-button21" ng-click="submitEthernet()" style="font-size:18px;text-align:left;" class="button button-dark button-large button-outline icon-right ion-network widget_button">Ethernet</button>
-    <button id="controlDevice-button43" ng-click="submitNotYetSupported()" style="font-size:18px;text-align:left;" class="button button-dark button-large icon-right ion-wifi widget_button">WiFi</button>
+    <button id="controlDevice-button21" ng-click="submitEthernet()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;text-align:left;" class="button button-dark button-large button-outline icon-right ion-network widget_button">Ethernet</button>
+    <button id="controlDevice-button43" ng-click="submitNotYetSupported()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;text-align:left;" class="button button-dark button-large icon-right ion-wifi widget_button">WiFi</button>
     <div class="spacer" style="width: 300px; height: 5px;"></div>
-    <button id="controlDevice-button18" ng-click="submitGPIO()" style="font-size:18px;text-align:left;" class="button button-dark button-large button-outline icon-right ion-pin widget_button">GPIO</button>
-    <button id="controlDevice-button19" ng-click="submitRTC()" style="font-size:18px;text-align:left;" class="button button-dark button-large button-outline icon-right ion-ios-clock widget_button">RTC</button>
+    <button id="controlDevice-button18" ng-click="submitGPIO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;text-align:left;" class="button button-dark button-large button-outline icon-right ion-pin widget_button">GPIO</button>
+    <button id="controlDevice-button19" ng-click="submitRTC()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;text-align:left;" class="button button-dark button-large button-outline icon-right ion-ios-clock widget_button">RTC</button>
     <div class="spacer" style="height: 5px;"></div>
-    <button id="controlDevice-button20" ng-click="submitUART()" style="font-size:18px;text-align:left;" class="button button-dark button-large button-outline icon-right ion-ios-monitor widget_button">UART</button>
-    <button id="controlDevice-button22" ng-click="submitNotifications()" style="font-size:14px;text-align:left;" class="button button-dark button-large button-outline icon-right ion-android-notifications widget_button">Notification</button>
+    <button id="controlDevice-button20" ng-click="submitUART()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;text-align:left;" class="button button-dark button-large button-outline icon-right ion-ios-monitor widget_button">UART</button>
+    <button id="controlDevice-button22" ng-click="submitNotifications()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:14px;text-align:left;" class="button button-dark button-large button-outline icon-right ion-android-notifications widget_button">Notification</button>
     <div class="spacer" style="height: 5px;"></div>
-    <button id="controlDevice-button37" ng-click="submitNotYetSupported()" style="font-size:18px;text-align:left;" class="button button-dark button-large icon-right ion-android-color-palette widget_button">Color</button>
-    <button id="controlDevice-button41" ng-click="submitNotYetSupported()" style="font-size:14px;text-align:left;" class="button button-dark button-large icon-right ion-ios-color-wand widget_button">Brightness</button>
+    <button id="controlDevice-button37" ng-click="submitNotYetSupported()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;text-align:left;" class="button button-dark button-large icon-right ion-android-color-palette widget_button">Color</button>
+    <button id="controlDevice-button41" ng-click="submitNotYetSupported()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:14px;text-align:left;" class="button button-dark button-large icon-right ion-ios-color-wand widget_button">Brightness</button>
     <div class="spacer" style="height: 5px;"></div>
-    <button id="controlDevice-button39" ng-click="submitNotYetSupported()" style="font-size:14px;text-align:left;" class="button button-dark button-large icon-right ion-bonfire widget_button">Temperature</button>
-    <button id="controlDevice-button42" ng-click="submitNotYetSupported()" style="font-size:18px;text-align:left;" class="button button-dark button-large icon-right ion-bonfire widget_button">Humidity</button>
+    <button id="controlDevice-button39" ng-click="submitNotYetSupported()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:14px;text-align:left;" class="button button-dark button-large icon-right ion-bonfire widget_button">Temperature</button>
+    <button id="controlDevice-button42" ng-click="submitNotYetSupported()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;text-align:left;" class="button button-dark button-large icon-right ion-bonfire widget_button">Humidity</button>
     <div class="spacer" style="height: 5px;"></div>
-    <button id="controlDevice-button35" ng-click="submitNotYetSupported()" style="font-size:18px;text-align:left;" class="button button-dark button-large icon-right ion-android-volume-up widget_button">Volume</button>
-    <button id="controlDevice-button34" ng-click="submitNotYetSupported()" style="font-size:18px;text-align:left;" class="button button-dark button-large icon-right ion-android-settings widget_button">Custom</button>
+    <button id="controlDevice-button35" ng-click="submitNotYetSupported()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;text-align:left;" class="button button-dark button-large icon-right ion-android-volume-up widget_button">Volume</button>
+    <button id="controlDevice-button34" ng-click="submitNotYetSupported()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;text-align:left;" class="button button-dark button-large icon-right ion-android-settings widget_button">Custom</button>
     <div class="spacer" style="height: 5px;"></div>
-    <button id="controlDevice-button40" ng-click="submitRestart()" style="font-size:18px;text-align:left;" class="button button-dark button-large button-outline icon-right ion-refresh widget_button">Restart</button>
+    <button id="controlDevice-button40" ng-click="submitRestart()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;text-align:left;" class="button button-dark button-large button-outline icon-right ion-refresh widget_button">Restart</button>
   </ion-content>
 </ion-view>
